--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -9,7 +9,7 @@
     height: 100vh;
     flex-direction: column;
   }
-  .pantry{
+  .pantry {
     width: 800px;
     height: 100px;
     background-color: #ADD8E6;
@@ -17,25 +17,41 @@
     justify-content: center;
     align-items: center;
   }
+
   .inside-stack {
     width: 800px;
     height: 300px;
     overflow: auto;
   }
 
-  .item-container{
+  .item-container {
     width: 100%;
     height: 100px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     background-color: #f0f0f0;
+    position: relative;
   }
 
-  .item{
-    text-align: center;
+  .item {
     color: #333;
   }
   
+  .input {
+    width: 80%; 
+    padding: 10px; 
+    border: 2px solid #ccc;
+    border-radius: 4px; 
+    font-size: 16px; 
+    transition: border-color 0.3s, box-shadow 0.3s; 
+    margin-right: 10px;
+  }
   
-  
+  .input::placeholder {
+    color: #aaa;
+    font-style: italic;
+  }
+
+  .inputbox {
+    display: flex;
+  }
