--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 .wrapper {
     border: 1px solid #333;
 }
@@ -21,38 +24,45 @@
   .inside-stack {
     width: 800px;
     height: 300px;
-    overflow: auto;
+    flex-grow: 1;
+    overflow-y: auto; /* Allows vertical scrolling */
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+    max-height: 60vh; /* Constrains the height to ensure scrolling */
   }
 
   .item-container {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Center items vertically */
-  background-color: #f0f0f0;
-  padding: 0 20px; 
-  box-sizing: border-box; 
-}
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center items vertically */
+    background-color: #f0f0f0;
+    padding: 0 20px; 
+    box-sizing: border-box; 
+  }
+  
+  .item {
+    flex: 2; 
+    color: #333;
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+  }
+  
+  .quantity {
+    flex: 1; 
+    text-align: center; 
+  }
+  
+  .delete-button {
+    flex: 1; 
+    display: flex;
+    justify-content: center; 
+  }
 
-.item {
-  flex: 2; 
-  color: #333;
-  white-space: nowrap; 
-  overflow: hidden; 
-  text-overflow: ellipsis; 
-}
 
-.quantity {
-  flex: 1; 
-  text-align: center; 
-}
 
-.delete-button {
-  flex: 1; 
-  display: flex;
-  justify-content: center; 
-}
+
 
   
   .input {
